IN PROGRESS - issue HERASAFXACMLCORE-47: Add standard method for obtaining the ID of a function http://jira.herasaf.org/browse/HERASAFXACMLCORE-47
git-svn-id: svn://localhost/herasaf-xacmlnew/trunk/herasaf-xacml/herasaf-xacml-core@1490 281314fa-7b5e-d943-bc7f-69d318bcf3fb