@@ -19,7 +19,7 @@ package org.herasaf.xacml.core.function.impl.numericDataTypeConversionFunctions;
 
 import java.math.BigInteger;
 
-import org.herasaf.xacml.core.function.Function;
+import org.herasaf.xacml.core.function.AbstractFunction;
 import org.herasaf.xacml.core.function.FunctionProcessingException;
 
 /**
@@ -37,23 +37,25 @@ import org.herasaf.xacml.core.function.FunctionProcessingException;
  * @author Stefan Oberholzer
  * @version 1.0
  */
-public class IntegerToDoubleFunction implements Function {
+public class IntegerToDoubleFunction extends AbstractFunction {
 	private static final long serialVersionUID = -5379650599546676469L;
 	private static final String ID = "urn:oasis:names:tc:xacml:1.0:function:integer-to-double";
 
 	/**
 	 * {@inheritDoc} <br>
 	 * <br>
-	 * Returns the integer value as double with the same numeric value.
+	 * Returns the intger value as double with the same numeric value.
 	 */
 	public Object handle(Object... args) throws FunctionProcessingException {
 		try {
 			if (args.length != 1) {
-				throw new FunctionProcessingException("Invalid number of parameters");
+				throw new FunctionProcessingException(
+						"Invalid number of parameters");
 			}
-			return Double.valueOf((((BigInteger) args[0]).longValue()));
+			return new Double(((BigInteger) args[0]).longValue());
 		} catch (ClassCastException e) {
-			throw new FunctionProcessingException("The arguments were of the wrong datatype.");
+			throw new FunctionProcessingException(
+					"The arguments were of the wrong datatype.");
 		} catch (FunctionProcessingException e) {
 			throw e;
 		} catch (Exception e) {
@@ -61,13 +63,11 @@ public class IntegerToDoubleFunction implements Function {
 		}
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.herasaf.core.function.FunctionAC#toString()
+	/**
+	 * {@inheritDoc}
 	 */
 	@Override
-	public String toString() {
+	public String getFunctionId() {
 		return ID;
 	}
 }
